--- a/index.html
+++ b/index.html
@@ -230,11 +230,9 @@ textarea{min-height:88px;resize:vertical}
 
   <!-- Step 5: thank you -->
   <div id="thankYouSection" class="section">
-    <h2 style="margin:6px 0 10px">Thanks for your message! 🎉</h2>
-    <p style="color:var(--muted)">Your message has been submitted successfully.</p>
-    <div style="display:flex;justify-content:flex-end;margin-top:10px">
-      <button id="adminBtnThank" class="btn-ghost" style="max-width:140px">Admin View</button>
-    </div>
+    <h1>Thanks for your message! 🎉</h1>
+    <p>Your message has been submitted successfully.</p>
+    <button id="adminBtn">Admin View</button>
   </div>
 
   <!-- Admin view -->
@@ -500,7 +498,7 @@ textarea{min-height:88px;resize:vertical}
   }
 
   // wire admin buttons
-  ["adminBtn","adminBtnPreview","adminBtnThank"].forEach(id=>{
+  ["adminBtn","adminBtnPreview"].forEach(id=>{
     const el = document.getElementById(id);
     if(el) el.addEventListener("click", openAdmin);
   });
@@ -535,3 +533,4 @@ textarea{min-height:88px;resize:vertical}
 </script>
 </body>
 </html>
+
