--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Birthday Message Board</title>
+<title>Birthday Message For Harveen</title>
 <style>
 :root {
   --bg: #1c1c1e;
@@ -137,7 +137,7 @@ button:hover { opacity:0.85; }
   <!-- Step 1 -->
   <div id="nameSection" class="section active">
     <h1>Welcome!</h1>
-    <p>Enter your name to continue:</p>
+    <p>Enter your name to continue(pls use ur real name):</p>
     <input type="text" id="userNameInput" placeholder="Your name">
     <button id="enterNameBtn">Next</button>
   </div>
@@ -151,7 +151,7 @@ button:hover { opacity:0.85; }
 
   <!-- Step 3 -->
   <div id="photoSection" class="section">
-    <h1>Add Photos (max 3)</h1>
+    <h1>Add Photos (preferably leaks) (max 3)</h1>
     <div id="photoButtons"></div>
     <button id="nextPhotoBtn">Preview</button>
     <button id="skipBtn">Skip</button>
@@ -360,3 +360,4 @@ document.getElementById("backBtn").onclick=()=>showSection("nameSection");
 </script>
 </body>
 </html>
+
