--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ button:hover { opacity:0.85; }
   <!-- Step 1 -->
   <div id="nameSection" class="section active">
     <h1>Welcome!</h1>
-    <p>Enter your name to continue(pls use ur real name):</p>
+    <p>Enter your name to continue (please use your real name!):</p>
     <input type="text" id="userNameInput" placeholder="Your name">
     <button id="enterNameBtn">Next</button>
   </div>
@@ -360,4 +360,5 @@ document.getElementById("backBtn").onclick=()=>showSection("nameSection");
 </script>
 </body>
 </html>
+
 
